--- a/my web page/sheelu.html
+++ b/my web page/sheelu.html
@@ -65,7 +65,7 @@
       <ul class="nav nav-pills nav-stacked">
         <li class="active"><a href="#section1"> MY DETAILS</a></li>
         <li><a href="#section2"><i class="fas fa-address-card"></i> &ensp; SHEELA</a></li>
-        <li><a href="https://www.google.com/search?q=anchor+in+tv+showes&tbm=isch&ved=2ahUKEwja8-r655P5AhU6j9gFHXKtC80Q2-cCegQIABAA&oq=anchor+in+tv+showes&gs_lcp=CgNpbWcQAzoECCMQJzoICAAQgAQQsQM6BwgAELEDEEM6BAgAEEM6BAgAEAM6BQgAEIAEOgYIABAeEAU6BAgAEBhQ7QtYjz1gl0FoAXAAeACAAYYBiAGoDJIBAzYuOZgBAKABAaoBC2d3cy13aXotaW1nwAEB&sclient=img&ei=1G3eYtq5Crqe4t4P8tqu6Aw&bih=643&biw=1366&client=firefox-b-e"><i class="fab fa-apple"></i> &ensp; MY PASSION</a></li>
+        <li><a href="#PASSION"> PASSION</a></li>
         <li><a href="https://biggbosstamil.in/priyanka-deshpande-biography/">MY ROLL MODEL</a></li>
       </ul><br>
     </div>
