--- a/my web page/sheelu.html
+++ b/my web page/sheelu.html
@@ -49,10 +49,8 @@
 MY FRIENDS ARE MY FAMILY.  MY ROLEMAODEL  ANCHOR PIRIYANKA.<br> I LOVE MY BROTHERS.</b>
       </div>
     </div>
-    <h4> I know basic HTML TAGS.<BR> </h4>
-    
-
-</body>
+    <h4> I know basic HTML TAGS.<BR> i love dance. </h4>
+    </body>
 </html>
 
 
