--- a/sheelu.html
+++ b/sheelu.html
@@ -19,8 +19,8 @@ body {
 .header {
   padding: 80px;
   text-align: center;
-  background: #1abc9c;
-  color: white;
+  background: #00dbf8;
+  color: rgb(221, 13, 228);
 }
 
 /* Increase the font size of the heading */
@@ -101,7 +101,7 @@ body {
 .footer {
   padding: 20px;
   text-align: center;
-  background: #ddd;
+  background: rgb(243, 5, 5);
 }
 
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
@@ -125,7 +125,7 @@ body {
     background-image:url(bb.jpg);
 }
 .cute{
-    background-image: url(images.jpg);
+    background-image: url(papa.jpg);
 }
 </style>
 </head>
@@ -137,39 +137,40 @@ body {
 </div>
 
 <div class="navbar">
-  <a href="#Home" class="active">Home</a>
-  <a href="#">About</a>
-  <a href="#">PASSION</a>
+  <a href="#Passion" class="active">Passion</a>
+  <a href="#Photo of Me">About</a>
+  <a href="#ROLEMODEL">ROLEMODEL</a>
 </div>
 
 <div class="row">
   <div class="side">
-    <h2>About Me</h2>
+    <h2 class="About">About Me</h2>
     <h5>Photo of me:</h5>
     <div class="fakeimg1" style="height:350px;"></div>
 <p>I LOVE MY SELF.</p>
-    <h3>MY PASSION IN ANCHOR</h3>
-    <p>.</p>
+    <h3 class="#PASSION">PASSION</h3>
+    <p>MY passion is an Anchor.</p>
     <div class="princen" style="height:450px;"></div><br>
    
   </div>
   <div class="main">
-    <h2>PASSION</h2>
-    <h5>MY ROLEMODEL</h5>
-    <div class="cute" style="height:300px;">Image</div>
+    <h2 class="#ROLEMODEL">ROLEMODEL</h2>
+    <h5>MY rolemodel piriyanka.</h5>
+    <div class="cute" style="height:70%;">Image</div>
     <p>Some text..</p>
     <p>my rolemodel in anchor piriyanka,very smart anchor.</p>
     <br>
-
-    <h2>MY DETAILES</h2>
     <h5>MY SKILLES</h5>
 
-    <p>I know basic htmltags,i will finished in DCA course,i am dancer,i know .</p>
+    <p>I know basic HTML TAGS,i will finished in DCA course,i am dancer,i little bit undedrstand in telungu language.  .</p>
   </div>
 </div>
+<br>
+<br>
+<br>
 
 <div class="footer">
-  <h2>Footer</h2>
+  <h2>THANKING YOU!</h2>
 </div>
 
 </body>
