--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@ body {
   }
 }
 .fakeimg1{
-    background-image: url(ss.jpg);
+    background-image: url(/my\ web\ page/);
 }
 .princen{
-    background-image:url(bb.jpg);
+    background-image:url(/bb.jpg);
 }
 .cute{
     background-image: url(papa.jpg);
