--- a/index.html
+++ b/index.html
@@ -119,13 +119,13 @@ body {
   }
 }
 .fakeimg1{
-    background-image: url(/my\ web\ page/);
+    background-image: url(imagesss/ss.jpg)
 }
 .princen{
-    background-image:url(/bb.jpg);
+    background-image:url(imagesss/bb.jpg);
 }
 .cute{
-    background-image: url(papa.jpg);
+    background-image: url(imagesss/papa.jpg);
 }
 </style>
 </head>
@@ -140,6 +140,9 @@ body {
   <a href="#Passion" class="active">Passion</a>
   <a href="#Photo of Me">About</a>
   <a href="#ROLEMODEL">ROLEMODEL</a>
+  <a href="#myhobby">myhobby</a>
+  
+  
 </div>
 
 <div class="row">
@@ -168,6 +171,11 @@ body {
 <br>
 <br>
 <br>
+<h2 class="MY HOBBY"> MY Hobby</h2>
+<video width="600" controls autoplay class="fdd">
+  <source src="imagesss/video.mp4" type="video/mp4">
+  <source src="mov_bbb.ogg" type="video/ogg">
+</video>
 
 <div class="footer">
   <h2>THANKING YOU!</h2>
