--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ body {
 </div>
 
 <div class="navbar">
-  <a href="#Passion" class="active">Passion</a>
+  <a href="#PASSION" class="active">PASSION</a>
   <a href="#Photo of Me">About</a>
   <a href="#ROLEMODEL">ROLEMODEL</a>
   <a href="#myhobby">myhobby</a>
